[package]
name = "docker-transformer"
version = "0.1.0"
edition = "2021"
authors = ["cmdjulian"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
docker-api = { version = "0.12.2", chrono = true, tls = true }
docker-compose-types = "0.4.0"
tokio = { version = "1", features = ["full"] }
